# nova-utils

./: .gitignore  .pre-commit-config.yaml  Crust_property.json  NOTICE  README.md  check_commit_rules.yaml  commit_hook.py  makefile  output.json  pyproject.toml  requirements.txt  run_integration_tests.yaml  setup.cfg  update_chain_prefix.yaml  update_chains_preconfigured.yaml  update_network_list.yaml  update_type_files.yaml
.gihtub/: commands.yaml
.github/: get_actual_json_path.sh
assets/: slip44.json
chains/: README.md  apply_dev_to_prod.py  chains.json  chains_dev.json  chains_validator.py  chains_validator.yaml
crowdloan/: kusama.json  polkadot-dev.json  polkadot.json  polkatrain.json  rococo.json  rococo_laminar.json  westend.json
dapps/: README.md  dapps.json  dapps_dev.json  dapps_full.json
global/: config.json  config_dev.json
governance/: dapps.json  dapps_dev.json
lightclient/: README.md  lightclient_dev.json
scripts/: XCM.ipynb  XCM_sync_preliminary_data.py  Xcms.ipynb  __init__.py  apply_prod_js_endpoints_to_preconfigured.py  check_new_assets.py  create_slip44_token_list.py  create_type_file.py  fee_via_runtime_call.py  generate-readme.py  generate_dapps_list.py  generate_network_list.py  generate_xcm_google_table.py  modify_chains.py  multi_location.py  polkadotjs_endpoints_to_preconfigured.py  print_xcm_changes.py  replace_urls.py  test_multi_location.py  update_chain_address_prefixes.py  update_generic_ledger_app_networks.py  update_icons.py  update_sufficiency.py  update_test_data.py  update_xcm_json_file.py  xcm_additional_data.json
(+567 files in other folders)
