[tool.poetry]
name = "nova-utils"
version = "1.0.0"
description = "Config project for Nova Wallet"
authors = ["Your Name <you@example.com>"]
license = "apache 2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
eth_typing = "2.3.0"
packaging = ">=23.2"
python = "^3.10"
allure-pytest = "2.12.0"
allure-python-commons = "2.12.0"
delayed_assert = "0.3.6"
deepdiff = "6.2.1"
Jinja2 = "3.1.2"
pytablewriter = "0.64.2"
pytest = "7.2.0"
pytest-xdist = "3.0.2"
pytest-rerunfailures = "10.3"
substrate-interface = "1.7.4"
web3 = "6.2.0"
flake8 = "^6.1.0"
func-timeout = "^4.3.5"
typing-extensions = "^4.9.0"



[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
